Integration de de eureka et config server au blogservice